--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <title>Frontend Project lvl3</title>
-  <script defer="defer" src="main.js"></script>
-  <link href="main.css" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -55,7 +53,7 @@
   </main>
   <footer class="footer border-top py-3 mt-5 bg-light">
     <div class="container-xl">
-      <div class="text-center">created by <a href="https://ru.hexlet.io/professions/frontend/projects/11"
+      <div class="text-center">created by <a href="https://github.com/Deim-Sha/frontend-project-lvl3"
           target="_blank">Deim-Sha</a></div>
     </div>
   </footer>
