--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
   </main>
   <footer class="footer border-top py-3 mt-5 bg-light">
     <div class="container-xl">
-      <div class="text-center">created by <a href="https://github.com/Deim-Sha/frontend-project-lvl3"
-          target="_blank">Deim-Sha</a></div>
+      <div class="text-center">created by <a href="https://github.com/Deim-Sha" target="_blank">Deim-Sha</a></div>
     </div>
   </footer>
 </body>
